--- a/nytingdalecare.co.uk-html/index.html
+++ b/nytingdalecare.co.uk-html/index.html
@@ -6,13 +6,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Care Pretoria | Nytingdale Care - Senior & Medical Services</title> <!-- Updated title: More specific and keyword-rich, targeting Pretoria. -->
+    <title>Home Care UK | Nytingdale Care - Senior & Medical Services</title> <!-- Updated title: More specific and keyword-rich, targeting Wales. -->
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Nytingdale Care provides compassionate home care, senior care, and medical care services in Pretoria.  We offer personalized care plans to enhance quality of life for your loved ones." /> <!-- Updated description: Clear, concise, and includes keywords and location.  Focuses on Nytingdale Care's services. -->
+    <meta name="description" content="Nytingdale Care provides compassionate home care, senior care, and medical care services in Wales.  We offer personalized care plans to enhance quality of life for your loved ones." /> <!-- Updated description: Clear, concise, and includes keywords and location.  Focuses on Nytingdale Care's services. -->
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -391,7 +391,7 @@
 
                     <div class="sec-title__tagline bw-split-in-up-fast"><span class="sec-title__tagline__border"></span>Our Services<span class="sec-title__tagline__border"></span></div><!-- /.sec-title__tagline -->
 
-                    <h3 class="sec-title__title bw-split-in-up">Home, Senior, and Medical Care Services in Pretoria</h3><!-- /.sec-title__title --> <!-- Updated title: More specific and includes keywords. -->
+                    <h3 class="sec-title__title bw-split-in-up">Home, Senior, and Medical Care Services in Wales</h3><!-- /.sec-title__title --> <!-- Updated title: More specific and includes keywords. -->
                 </div><!-- /.sec-title -->
                 <div class="row gutter-y-30">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="00ms">
